--- a/index.html
+++ b/index.html
@@ -2,58 +2,23 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <title>Full width container</title>
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="container bg-success text-white">
+        <h1>my first bootstrap page</h1>
+        <p>this part is inside of container page</p>
+        <p>the container class provide a responsive width container</p>
 
-
-        <div class="griditem1">header</div>
-        <div class="griditem2">menu</div>
-        <div class="griditem3">main</div>
-        <div class="griditem4">footer</div>
 
 
 
 
     </div>
 
-
-
-
-
-
 </body>
 
 </html>
-
-<style>
-    .griditem1 {
-        grid-area: header;
-    }
-
-    .griditem2 {
-        grid-area: menu;
-    }
-
-    .griditem3 {
-        grid-area: main;
-    }
-
-    .griditem4 {
-        grid-area: footer;
-    }
-
-    .grid-container{
-        display: grid;
-        grid-template-columns: auto auto auto auto auto;
-        grid-template-areas: 'header header header header header'
-            'menu main main main main'
-            'menu footer footer footer footer';
-            background-color: seagreen;
-            padding: 10px;
-    }
-</style>
